[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/modified/missiles.png" type="Texture" id=1]
[ext_resource path="res://src/Weapons/Bullet.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 2.04382 )

[node name="Bullet" type="RigidBody2D" groups=[
"Bullet",
]]
z_index = -1
collision_layer = 20
collision_mask = 2147484163
mass = 10.0
gravity_scale = 10.0
continuous_cd = 2
contacts_reported = 10
contact_monitor = true
can_sleep = false
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.0834274, 0.375423 )
shape = SubResource( 1 )

[node name="killTimer" type="Timer" parent="."]
wait_time = 0.8
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="killTimer" to="." method="_on_killTimer_timeout"]
